--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -146,7 +146,7 @@ jobs:
     - name: Get dependencies
       run: |
         # temp hack fix to make brew work
-        brew unlink python@3.11
+        brew unlink python@3.11 && brew link --overwrite python@3.11
         brew unlink node@18
         mk/macos/setupBuildDeps.sh
 
