--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -150,7 +150,7 @@ jobs:
         brew update
         brew upgrade
         PKG_CONFIG_PATH="/usr/local/opt/curl/lib/pkgconfig":${PKG_CONFIG_PATH}
-        echo 'export PATH="/usr/local/opt/curl/bin:$PATH"' >> /Users/runner/.bash_profile
+        PATH="/usr/local/opt/curl/bin:$PATH"
         # temp hack fix to make brew work
         brew unlink python@3.11 && brew link --overwrite python@3.11
         brew unlink node@18
