first uninstall bash-completion
Seems to be causing a crash?

https://github.com/MegaGlest/megaglest-source/actions/runs/7121213666/job/19390008510#step:3:891

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -147,6 +147,7 @@ jobs:
 
     - name: Get dependencies
       run: |
+        brew uninstall bash-completion # when upgrading brew, it seems to exit when installing this package
         brew update
         brew upgrade
         PKG_CONFIG_PATH="/usr/local/opt/curl/lib/pkgconfig":${PKG_CONFIG_PATH}
