remove line that uninstalls bash-completion...
* add brew doctor
* add brew config

When I tried uninstalling bash-completion, the CI failed: "Error: No
such keg: /usr/local/Cellar/bash-completion"

Not totally related but https://github.com/Homebrew/brew/issues/3051

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -147,8 +147,9 @@ jobs:
 
     - name: Get dependencies
       run: |
-        brew uninstall bash-completion # when upgrading brew, it seems to exit when installing this package
         brew update
+        brew doctor
+        brew config
         brew upgrade
         PKG_CONFIG_PATH="/usr/local/opt/curl/lib/pkgconfig":${PKG_CONFIG_PATH}
         PATH="/usr/local/opt/curl/bin:$PATH"
