run brew cleanup
brew doctor exited with a message about broken symlinks

https://github.com/MegaGlest/megaglest-source/actions/runs/7121511069/job/19390873398#step:3:342

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -147,7 +147,9 @@ jobs:
 
     - name: Get dependencies
       run: |
+        brew cleanup
         brew update
+        brew cleanup
         brew doctor
         brew config
         brew upgrade
