--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -147,6 +147,8 @@ jobs:
 
     - name: Get dependencies
       run: |
+        brew untap homebrew/cask
+        brew untap homebrew/core
         brew cleanup
         brew update
         brew cleanup
