--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -155,8 +155,8 @@ jobs:
         PKG_CONFIG_PATH="/usr/local/opt/curl/lib/pkgconfig":${PKG_CONFIG_PATH}
         PATH="/usr/local/opt/curl/bin:$PATH"
         # temp hack fix to make brew work
-        brew unlink python@3.11 && brew link --overwrite python@3.11
-        brew unlink node@18
+        # brew unlink python@3.11 && brew link --overwrite python@3.11
+        # brew unlink node@18
         mk/macos/setupBuildDeps.sh
         # more stupid hacks - these will need removing or changing at some point.
         # cd /usr/local/Cellar/libnghttp2/
