--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -154,6 +154,9 @@ jobs:
         brew update
         brew config
         brew upgrade
+        # Probably not needed if a search for zstd is properly added to CMakeLists.txt;
+        # at least, brew doesn't suggest it's needed...
+        # PKG_CONFIG_PATH="/usr/local/Cellar/zstd/lib/pkgconfig":${PKG_CONFIG_PATH}
         PKG_CONFIG_PATH="/usr/local/opt/curl/lib/pkgconfig":${PKG_CONFIG_PATH}
         PATH="/usr/local/opt/curl/bin:$PATH"
         mk/macos/setupBuildDeps.sh
