FindZSTD.cmake: add new file from llvm project

--- a/source/shared_lib/CMakeLists.txt
+++ b/source/shared_lib/CMakeLists.txt
@@ -159,10 +159,10 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${JPEG_LIBRARY})
 	ENDIF()
 
-	FIND_PACKAGE(ZSTD REQUIRED)
-	INCLUDE_DIRECTORIES(${ZSTD_INCLUDE_DIR})
+	FIND_PACKAGE(zstd REQUIRED)
+	INCLUDE_DIRECTORIES(${zstd_INCLUDE_DIR})
 	IF(UNIX)
-		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${ZSTD_LIBRARY})
+		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${zstd_LIBRARY})
 	ENDIF()
 
 	FIND_PACKAGE(PNG REQUIRED)
