--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,7 +31,9 @@ jobs:
     - name: Get dependencies
       run: |
         echo 'APT::Get::Always-Include-Phased-Updates "false";' | sudo tee /etc/apt/apt.conf.d/99-phased-updates
-        sudo apt-get update && sudo apt-get upgrade
+        # If GitHub has updates the runner often enough, updating and upgrading
+        # should not be necessary.
+        # sudo apt-get update && sudo apt-get upgrade
         sudo mk/linux/setupBuildDeps.sh
     - name: Build
       run:  |
