cmake.yml: Add FTLO to gcc build

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,6 +32,10 @@ jobs:
       run: |
         echo 'APT::Get::Always-Include-Phased-Updates "false";' | sudo tee /etc/apt/apt.conf.d/99-phased-updates
         sudo apt-get update && sudo apt-get upgrade
+        if [ "${{ matrix.compiler }}" = "gcc" ]; then
+            ADD_FLAGS="-flto=$(nproc) -Werror=odr -Werror=lto-type-mismatch -Werror=strict-aliasing"
+            export CFLAGS=$ADD_FLAGS CXXFLAGS=$ADD_FLAGS
+        fi
         sudo mk/linux/setupBuildDeps.sh
     - name: Build
       run:  |
