Fix build with LTO (closes #275) (#289)
* Fix build with LTO (closes #275)

* Revert "Fix build with LTO (closes #275)"

This reverts commit 631530536631f4c50aa1b0a7ef167e44e9e3e50a.

* cmake: Import CFLAGS and CXXFLAGS from environment and append

* cmake.yml: Add FTLO to gcc build

* Move some flags from CI to CMake

* export CFLAGS to the correct location

* menu/menu_state_mods.h: Rename enum type

Fixes https://github.com/MegaGlest/megaglest-source/issues/275

* Refactor extra flags in CMake

* Improve conditions for code

* use 'auto' for flto value

* CMakeLists.txt: Add LTO for release builds

---------

Co-authored-by: andy5995 <arch_stanton5995@proton.me>

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -37,6 +37,9 @@ jobs:
       run:  |
         if [ "${MATRIX_COMPILER}" = "clang" ]; then
           EXTRA_OPTS="-f"
+        else
+          ADD_FLAGS="-flto=auto"
+          export CFLAGS=$ADD_FLAGS CXXFLAGS=$ADD_FLAGS
         fi
         mk/linux/build-mg.sh -m -d ${EXTRA_OPTS}
         make -C mk/linux/build -j$(nproc) VERBOSE=1
