--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ PROJECT( MegaGlest )
 #SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 #
-# *NOTE: This script has been tested and works with with GCC, Clang and MSbuild (VS). 
+# *NOTE: This script has been tested and works with with GCC, Clang and MSbuild (VS).
 # MSBuild requires using vcpkg and installing required libs.
 # Script works with Windows, Linux and Mac.
 #
@@ -193,7 +193,61 @@ IF(CMAKE_COMPILER_IS_GNUCXX OR MINGW OR MSVC)
 #                ENDIF()
     ENDIF()
 
-	#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")	
+if(DEFINED ENV{CFLAGS})
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} $ENV{CFLAGS}")
+endif()
+
+if(DEFINED ENV{CXXFLAGS})
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} $ENV{CXXFLAGS}")
+endif()
+
+# Include the necessary modules to check compiler flags
+include(CheckCXXCompilerFlag)
+include(CheckCCompilerFlag)
+
+# Define your extra flags in a list
+set(EXTRA_FLAGS
+    "-Werror=odr"
+    "-Werror=lto-type-mismatch"
+    "-Werror=strict-aliasing"
+)
+
+# Loop through each flag and check for both C++ and C compilers
+foreach(flag ${EXTRA_FLAGS})
+
+    # Check for C++ compiler
+    check_cxx_compiler_flag(${flag} CXX_SUPPORTS_${flag})
+    if(CXX_SUPPORTS_${flag})
+        message(STATUS "C++ compiler supports flag ${flag}")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
+    else()
+        message(STATUS "C++ compiler does not support flag ${flag}")
+    endif()
+
+    # Check for C compiler
+    check_c_compiler_flag(${flag} C_SUPPORTS_${flag})
+    if(C_SUPPORTS_${flag})
+        message(STATUS "C compiler supports flag ${flag}")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${flag}")
+    else()
+        message(STATUS "C compiler does not support flag ${flag}")
+    endif()
+
+endforeach()
+
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    include(CheckIPOSupported)
+    check_ipo_supported(RESULT result OUTPUT output)
+
+    if(result)
+        message(STATUS "IPO (LTO) is supported: enabling for Release build.")
+        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
+    else()
+        message(STATUS "IPO (LTO) is not supported: ${output}")
+    endif()
+endif()
+
+	#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
     #MESSAGE(STATUS "*TEST: Checking for max SSE LEVEL [${FORCE_MAX_SSE_LEVEL}]")
 
 	OPTION(FORCE_STREFLOP_SOFTWRAPPER "Set the streflop library to be forced to use the software emulator" OFF)
@@ -248,7 +302,7 @@ size_t stack_depth = backtrace(stack_addrs, max_depth);
 	ELSE()
 		message(STATUS "**WARNING DID NOT Find GCC backtrace lib")
 	ENDIF()
-	
+
 	IF(NOT MSVC)
 		# Debug compiler flags
 		SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g3")
@@ -288,7 +342,7 @@ size_t stack_depth = backtrace(stack_addrs, max_depth);
 		include(FindGit)
 
 		IF(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git/")
-            SET(HAS_GIT "TRUE") 
+            SET(HAS_GIT "TRUE")
             MESSAGE(STATUS "Found GIT and using GIT version stamping...")
 
             # Get the current commit SHA1
@@ -378,7 +432,7 @@ size_t stack_depth = backtrace(stack_addrs, max_depth);
 	ENDIF()
 	SET(CMAKE_CXX_FLAGS_${MG_BUILD_TYPE} "${CMAKE_CXX_FLAGS_${MG_BUILD_TYPE}} ${CUSTOM_INSTALL_PATHS_VALUES}")
 
-	# We do some funky character escaping to get the right stuff written out to 
+	# We do some funky character escaping to get the right stuff written out to
 	# the final Makefile so we get the GIT Global Revsion #
 	string(REPLACE "'" "\"" CMAKE_CXX_FLAGS_${MG_BUILD_TYPE} "${CMAKE_CXX_FLAGS_${MG_BUILD_TYPE}}")
 
