--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         arch: [x64]
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
         compiler: [gcc, clang]
     runs-on: ${{ matrix.os }}
     env:
@@ -31,7 +31,9 @@ jobs:
     - name: Get dependencies
       run: |
         echo 'APT::Get::Always-Include-Phased-Updates "false";' | sudo tee /etc/apt/apt.conf.d/99-phased-updates
-        sudo apt-get update && sudo apt-get upgrade
+        # If GitHub has updates the runner often enough, updating and upgrading
+        # should not be necessary.
+        # sudo apt-get update && sudo apt-get upgrade
         sudo mk/linux/setupBuildDeps.sh
     - name: Build
       run:  |
